<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2009 University of Washington

Licensed under the Apache License, Version 2.0 (the "License"); you may not
use this file except in compliance with the License. You may obtain a copy of
the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
License for the specific language governing permissions and limitations under
the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:background="@color/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/audio_recording_controller"
            android:name="org.odk.collect.android.audio.AudioRecordingControllerFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <org.odk.collect.android.views.ObviousProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:layout_marginTop="-7dp"
        android:indeterminate="true"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/questionholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonholder"
        android:layout_below="@id/appBarLayout" />

    <ImageView
        android:id="@+id/shadow_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonholder"
        android:src="@drawable/shadow_up" />

    <LinearLayout
        android:id="@+id/buttonholder"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/app_bar"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/form_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/app_bar"
            android:clickable="true"
            android:contentDescription="@string/form_backward"
            android:drawableStart="@drawable/ic_navigate_back_wrapped"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/form_backward"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="?colorOnPrimary"
            android:textStyle="bold"
            android:visibility="gone" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/form_forward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/app_bar"
            android:clickable="true"
            android:contentDescription="@string/form_forward"
            android:drawableEnd="@drawable/ic_navigate_forward_wrapped"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/form_forward"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="?colorOnPrimary"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>
