...
            android:padding="12dp"
            android:text="@string/jump_to_beginning"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/jumpEndButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/jump_to_end"
            android:textAllCaps="false"
...
