...
    <string name="jump_to_previous">Go Up</string>
    <string name="loading_form">Loading Form</string>
    <string name="load_remote_form_error">Form list download failed</string>
    <string name="location_accuracy">Accuracy: %1$s m</string>
    <string name="location_provider">Location provider: %s</string>
    <string name="manage_files">Delete Saved Form</string>
    <string name="mark_finished">Mark form as finalized</string>
    <string name="noselect_error">Sorry, you have not selected any forms!</string>
    <string name="no_connection">No network connection available</string>
    <string name="no_items_display">Nothing available to display.</string>
    <string name="no_items_display_forms">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
    <string name="no_items_display_sent_forms">Nothing available to display.\n\nTry sending finalized forms before viewing.</string>
    <string name="no_items_display_instances">Nothing available to display.\n\nTry finalizing saved forms before sending.</string>
...
    <string name="parse_error">Sorry, unable to parse form.</string>
    <string name="password">Password</string>
    <string name="play_video">Play Video</string>
    <string name="please_wait">Please wait a few moments.</string>
    <string name="please_wait_long">Please wait. This could take a few minutes.</string>
    <string name="quit_application">Exit %s</string>
    <string name="quit_entry">Save Form and Exit</string>
    <string name="refresh">Refresh</string>
    <string name="group_label">Group</string>
    <string name="repeatable_group_label">Repeatable Group</string>
    <string name="replace_barcode">Replace Barcode</string>
    <string name="required_answer_error">Sorry, this response is required!</string>
    <string name="review_data">Edit Saved Form</string>
    <string name="view_data">View Saved Form</string>
    <string name="review_data_button">Edit Saved Form (%s)‎‎‎‎</string>
    <string name="save_all_answers">Save Form</string>
    <string name="save_enter_data_description">You are at the end of %s.</string>
    <string name="saving_form">Saving Form</string>
    <string name="sending_items">Sending %1$s of %2$s form(s)</string>
    <string name="send_data">Send Finalized Form</string>
    <string name="send_data_button">Send Finalized Form</string>
    <string name="send_selected_data">Send Selected</string>
    <string name="view_sent_forms">View Sent Form</string>
...
    <string name="choose_file">Choose File</string>
    <string name="choose_sound">Choose Sound</string>
    <string name="choose_video">Choose Video</string>
    <string name="choose_image">Choose Image</string>
    <string name="selected">Selected: </string>
    <string name="select_answer">Select Answer</string>
    <string name="save_form_as">Name this form</string>
    <string name="save_as_error">Saved name must not be blank!</string>
    <string name="edit_prompt">Edit Prompt</string>
    <string name="selected_google_account_text">Google account</string>
    <string name="font_size_extra_large">Extra Large</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_medium">Medium</string>
...
    <string name="sent_on_date_at_time">\'Sent:\' HH:mm, EEE, MMM dd, yyyy</string> <!-- http://docs.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html -->
    <string name="sending_failed_on_date_at_time">\'Sending failed:\' HH:mm, EEE, MMM dd, yyyy</string> <!-- http://docs.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html -->
    <string name="deleted_on_date_at_time">\'Deleted:\' HH:mm, EEE, MMM dd, yyyy</string>
    <string name="submission_deleted">Submission deleted</string>
    <string name="version">Version:</string>
    <string name="parent_form_not_present">Unable to edit this saved form because the corresponding blank form is not present or was deleted.\n\nForm ID: %1$s</string>
    <string name="launch_app">Launch</string>
    <string name="no_app">The requested app is not installed</string>
    <string name="select_one">Select One Answer</string>
    <string name="savepoint_used">Unsaved changes recovered from savepoint!</string>
    <string name="save_and_close">Save and Close</string>
    <string name="sign_button">Gather Signature</string>
    <string name="markup_image">Markup Image</string>
...
    <string name="admin_password_incorrect">Sorry, password is incorrect!</string>
    <string name="enter_admin_password">Enter Admin Password</string>
    <string name="change_admin_password">Change Admin Password</string>
    <string name="autosend">Auto send</string>
    <string name="found_in_main">Uncheck to hide from Main Menu</string>
    <string name="found_in_settings">Uncheck to hide from General Settings</string>
    <string name="form_forward">Next</string>
    <string name="form_backward">Back</string>
    <string name="navigation">Navigation</string>
    <string name="swipe_navigation">Use horizontal swipes</string>
    <string name="buttons_navigation">Use forward/backward buttons</string>
    <string name="swipe_buttons_navigation">Use swipes and buttons</string>
    <string name="launch_printer">Initiate Printing</string>
...
