<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="?cardBackgroundColor">

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fastScrollEnabled="false"
        android:nestedScrollingEnabled="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:smoothScrollbar="false"
        tools:ignore="UnusedAttribute" />

</android.support.v7.widget.CardView>